--- a/gr1_hardware/fse_sdk/package.xml
+++ b/gr1_hardware/fse_sdk/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-    <name>gr1_hardware_interface</name>
+    <name>fsesdk</name>
     <version>0.0.0</version>
-    <description>hardware interface for gr1</description>
+    <description>fse sdk for gr1</description>
     <maintainer email="liqian.ma.2001@gmail.com">mlq</maintainer>
 
     <license>BSD</license>
@@ -11,9 +11,5 @@
     <buildtool_depend>catkin</buildtool_depend>
 
     <build_depend>cmake_clang_tools</build_depend>
-    <depend>roscpp</depend>
-    <depend>legged_hw</depend>
-    <depend>fsasdk</depend>
-    <depend>fsesdk</depend>
     <!-- <depend>dynamic_reconfigure</depend> -->
 </package>
