update cmake and readme

--- a/gr1_hardware/fsa_sdk/CMakeLists.txt
+++ b/gr1_hardware/fsa_sdk/CMakeLists.txt
@@ -8,12 +8,13 @@ find_package(catkin REQUIRED
         COMPONENTS
         )
 
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
 catkin_package(
         INCLUDE_DIRS
                 include
                 ThirdParty
-                /usr/include/eigen3
+                ${EIGEN3_INCLUDE_DIRS}
         LIBRARIES
                 ${PROJECT_NAME}
         CATKIN_DEPENDS
