--- a/gr1_hardware/fse_sdk/CMakeLists.txt
+++ b/gr1_hardware/fse_sdk/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.16)
 
 project(fsesdk)
 
+find_package(catkin REQUIRED
+        COMPONENTS
+        )
+
 catkin_package(
         INCLUDE_DIRS
                 include
@@ -11,7 +15,14 @@ catkin_package(
                 # dynamic_reconfigure
 )
 
-add_subdirectory(source build)
+include_directories(
+        include
+        ${catkin_INCLUDE_DIRS}
+)
+
+# add_subdirectory(source build)
+aux_source_directory(${PROJECT_SOURCE_DIR}/source dir_fse)
+add_library(fsesdk SHARED ${dir_fse})
 
 
 
