--- a/gr1_hardware/gr1_hardware_interface/CMakeLists.txt
+++ b/gr1_hardware/gr1_hardware_interface/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED
         roscpp
         legged_hw
         fsasdk
+        fsesdk
         # dynamic_reconfigure
         )
 find_package(Threads REQUIRED)
@@ -26,6 +27,7 @@ catkin_package(
                 roscpp
                 legged_hw
                 fsasdk
+                fsesdk
                 # dynamic_reconfigure
 )
 
