add go to default pos

--- a/gr1_hardware/gr1_hardware_interface/CMakeLists.txt
+++ b/gr1_hardware/gr1_hardware_interface/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED
         legged_hw
         fsasdk
         fsesdk
+        ocs2_core
         # dynamic_reconfigure
         )
 find_package(Threads REQUIRED)
@@ -28,6 +29,7 @@ catkin_package(
                 legged_hw
                 fsasdk
                 fsesdk
+                ocs2_core
                 # dynamic_reconfigure
 )
 
